# maia2

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
maia2/: __init__.py  dataset.py  fetch_data.sh  inference.py  main.py  model.py  requirements.txt  train.py  utils.py
maia2/configs/: __init__.py  maia2-training-blitz.yaml  maia2-training-rapid.yaml
tests/: test_documentation.py  test_downloads_and_utils.py  test_evaluation_masking.py  test_inference_masking.py  test_model_devices.py  test_packaged_config.py  test_training_dataset.py  test_training_devices.py  test_training_filters.py  test_training_pipeline.py
