[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "maia2"
authors = [{name = "csslab", email = "josephtang@cs.toronto.edu"}]
description = "Official implementation of Maia-2, a unified human-like chess model across skill levels."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.13"
keywords = ["chess", "human-ai alignment", "machine learning", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "chess>=1.10.0,<2",
    "einops>=0.8.0,<1",
    "gdown>=5.2.0,<6",
    "numpy>=2.1.3,<3",
    "pandas>=2.2.3,<3",
    "pyyaml>=6.0.2,<7",
    "pyzstd>=0.19.1,<0.20",
    "requests>=2.32.4,<3",
    "torch>=2.8.0,<2.9",
    "tqdm>=4.66.3,<5",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "pytest>=8,<9",
    "ruff>=0.14,<1",
]

[project.urls]
Homepage = "https://www.maiachess.com/"
Source = "https://github.com/CSSLab/maia2"
Paper = "https://arxiv.org/abs/2409.20553"
Issues = "https://github.com/CSSLab/maia2/issues"
"Maia-3" = "https://github.com/CSSLab/maia3"

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flit.sdist]
include = [
    "CITATION.cff",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "tests/",
]
